# Clion-Qt5

./: CMakeLists.txt  README.md  main.cpp
